--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <meta property="og:title" content="Chat-Bot" />
     <meta property="og:description" content="chatbot" />
     <meta property="og:type" content="website" />
-    
 
-   
-
+    <!-- ✅ Chatbot favicon -->
+    <link rel="icon" href="https://img.icons8.com/fluency/48/chatbot.png" type="image/png" />
   </head>
 
   <body>
